Add the draft of HTML

--- a/index.html
+++ b/index.html
@@ -6,6 +6,79 @@
 		<title>Project | Landing Page</title>
 	</head>
 	<body>
+
+		<header>
+			<ul class="header-right">
+				<li class="header-logo"><a href="">Header Logo</a></li>
+			</ul>
+			<ul class="header-left">
+				<li><a href="">header link one</a></li>
+				<li><a href="">header link two</a></li>
+				<li><a href="">header link three</a></li>
+			</ul>
+		</header>
+
+		<main>
+			<artile class="main-article">
+				<div class="main-article-content">
+					<h1>This website is awesome</h1>
+					<p>
+						This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.
+					</p>
+					<button class="singup-button">Sign up</button>
+				</div>
+				<img src="" alt="this is the placeholder of an image" class="main-article-img">
+			</artile>
+
+			<article class="article-second">
+				<h2>Some random information.</h2>
+				<div class="card">
+					<img src="" alt="">
+					<p>
+						this is some subtext under an illustration or image
+					</p>
+				</div>
+				<div class="card">
+					<img src="" alt="">
+					<p>
+						this is some subtext under an illustration or image
+					</p>
+				</div>
+				<div class="card">
+					<img src="" alt="">
+					<p>
+						this is some subtext under an illustration or image
+					</p>
+				</div>
+				<div class="card">
+					<img src="" alt="">
+					<p>
+						this is some subtext under an illustration or image
+					</p>
+				</div>
+			</article>
+
+			<article class="article-third">
+				<p>
+					This is an ispiring quote, or testimonial from a customer. Maybe it's just filling up space, or maybe people iwll actually read it. Who knows? All I know is that it looks nice.
+				</p>
+				<p><strong>-Thor, God of Thunder</strong></p>
+			</article>
+
+			<div class="signup-container">
+				<div class="signup-container-left">
+					<h3>Call to action! It's time!</h3>
+					<p>Sign up for our product by clicking that button right over there!</p>
+				</div>
+				<div class="signup-container-right">
+					<button>Sign up</button>
+				</div>
+			</div>
+		</main>
+
+		<footer>
+			<p>Copyright © The Odin Project 2021</p>
+		</footer>
 	</body>
 </html>
 
