--- a/index.html
+++ b/index.html
@@ -4,18 +4,21 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Project | Landing Page</title>
+		<link rel="stylesheet" href="./style.css">
 	</head>
 	<body>
 
 		<header>
-			<ul class="header-right">
-				<li class="header-logo"><a href="">Header Logo</a></li>
-			</ul>
-			<ul class="header-left">
-				<li><a href="">header link one</a></li>
-				<li><a href="">header link two</a></li>
-				<li><a href="">header link three</a></li>
-			</ul>
+			<div class="header-container">
+				<ul class="header-right">
+					<li class="header-logo"><a href="">Header Logo</a></li>
+				</ul>
+				<ul class="header-left">
+					<li><a href="">header link one</a></li>
+					<li><a href="">header link two</a></li>
+					<li><a href="">header link three</a></li>
+				</ul>
+			</div>
 		</header>
 
 		<main>
