Style cards section

--- a/index.html
+++ b/index.html
@@ -24,40 +24,46 @@
 		<main>
 			<artile class="main-article">
 				<div class="main-article-content">
-					<h1>This website is awesome</h1>
-					<p>
-						This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.
-					</p>
-					<button class="singup-button">Sign up</button>
+					<div class="main-article-left">
+						<h1>This website is awesome</h1>
+						<p>
+							This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.
+						</p>
+						<button class="signup-button">Sign up</button>
+					</div>
+					<div class="main-article-right">
+						<img src="" alt="this is the placeholder of an image" class="main-article-img">
+					</div>
 				</div>
-				<img src="" alt="this is the placeholder of an image" class="main-article-img">
 			</artile>
 
 			<article class="article-second">
 				<h2>Some random information.</h2>
-				<div class="card">
-					<img src="" alt="">
-					<p>
-						this is some subtext under an illustration or image
-					</p>
-				</div>
-				<div class="card">
-					<img src="" alt="">
-					<p>
-						this is some subtext under an illustration or image
-					</p>
-				</div>
-				<div class="card">
-					<img src="" alt="">
-					<p>
-						this is some subtext under an illustration or image
-					</p>
-				</div>
-				<div class="card">
-					<img src="" alt="">
-					<p>
-						this is some subtext under an illustration or image
-					</p>
+				<div class="cards-container">
+					<div class="card">
+						<img src="" alt="">
+						<p>
+							this is some subtext under an illustration or image
+						</p>
+					</div>
+					<div class="card">
+						<img src="" alt="">
+						<p>
+							this is some subtext under an illustration or image
+						</p>
+					</div>
+					<div class="card">
+						<img src="" alt="">
+						<p>
+							this is some subtext under an illustration or image
+						</p>
+					</div>
+					<div class="card">
+						<img src="" alt="">
+						<p>
+							this is some subtext under an illustration or image
+						</p>
+					</div>
 				</div>
 			</article>
 
